# anki_scripts

./: .gitignore  README.md  pyproject.toml
anki_scripts/: __main__.py  cli.py
anki_scripts/exporters/: __init__.py  to_csv.py  to_json.py  to_yaml.py
anki_scripts/extractors/: base.py  google_form.py  telegram.py
anki_scripts/models/: quiz.py
